member cards and events alignment fix

--- a/rohit/crads/style.css
+++ b/rohit/crads/style.css
@@ -2,65 +2,67 @@
     syntax: "<angle>";
     initial-value: 132deg;
     inherits: false;
-  }
-  
-  :root {
-    --card-height: 65vh;
-    --card-width: calc(var(--card-height) / 1.5);
-  }
-  
-  
-  body {
+}
+
+:root {
+    --member-card-height: 65vh;
+    --member-card-width: calc(var(--member-card-height) / 1.5);
+}
+
+body {
     min-height: 100vh;
     background: #212534;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: cursive;
-  }
+}
 
-.container{
-      display: flex;
-    }
+.member-container {
+    display: flex;
+}
 
-  .card {
+.member-card {
     background: #191c29;
-    width: var(--card-width);
-    height: var(--card-height);
+    width: var(--member-card-width);
+    height: var(--member-card-height);
     font-size: 1.5em;
     color: rgb(88 199 250 / 0%);
     cursor: pointer;
-  }
-  
-  .card:hover {
+}
+
+.member-card:hover {
     color: rgb(88 199 250 / 100%);
     transition: color 1s;
-  }
-  .card:hover:before, .card:hover:after {
+}
+.member-card:hover:before,
+.member-card:hover:after {
     animation: none;
     opacity: 0;
-  }
-  
-  
-  .card::before {
+}
+
+.member-card::before {
     content: "";
     width: 104%;
     height: 102%;
     border-radius: 8px;
     background-image: linear-gradient(
-      var(--rotate)
-      , #7e0fff, #0fffc1 43%, #7e0fff);
-      position: absolute;
-      z-index: -1;
-      top: -1%;
-      left: -2%;
-      animation: spin 2.5s linear infinite;
-  }
-  
-  .card::after {
+        var(--rotate),
+        #7e0fff,
+        #0fffc1 43%,
+        #7e0fff
+    );
+    position: absolute;
+    z-index: -1;
+    top: -1%;
+    left: -2%;
+    animation: spin 2.5s linear infinite;
+}
+
+.member-card::after {
     position: absolute;
     content: "";
-    top: calc(var(--card-height) / 6);
+    top: calc(var(--member-card-height) / 6);
     left: 0;
     right: 0;
     z-index: -1;
@@ -68,20 +70,23 @@
     width: 100%;
     margin: 0 auto;
     transform: scale(0.8);
-    filter: blur(calc(var(--card-height) / 6));
+    filter: blur(calc(var(--member-card-height) / 6));
     background-image: linear-gradient(
-      var(--rotate)
-      , #5ddcff, #3c67e3 43%, #4e00c2);
-      opacity: 1;
-    transition: opacity .5s;
+        var(--rotate),
+        #5ddcff,
+        #3c67e3 43%,
+        #4e00c2
+    );
+    opacity: 1;
+    transition: opacity 0.5s;
     animation: spin 2.5s linear infinite;
-  }
-  
-  @keyframes spin {
+}
+
+@keyframes spin {
     0% {
-      --rotate: 0deg;
+        --rotate: 0deg;
     }
     100% {
-      --rotate: 360deg;
+        --rotate: 360deg;
     }
-  }
+}
